--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -89,3 +89,17 @@
 #banner>.inner .content>.actions{
 	margin: 0 auto;
 }
+.map{
+	position: relative;
+	clear:both;
+	overflow: hidden;
+	&:before{
+		content: '';
+		position: absolute;
+		top:0;
+		left:0;
+		width:100%;
+		height:100%;
+		background-color: rgba(35, 41, 67, 0.6)
+	}
+}
