--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,7 +21,7 @@
 				</ul>
 			</form>
 		</section>
-		<section class="split">
+<!-- 		<section class="split">
 
 			<section>
 				<div class="contact-method">
@@ -46,8 +46,11 @@
 					</span>
 				</div>
 			</section>
-		</section>
+		</section> -->
 	</div>
+</section>
+<section class="map">
+	<div style="width: 100%"><iframe width="100%" height="300" src="https://maps.google.com/maps?width=100%&amp;height=300&amp;hl=en&amp;q=Wroclaw+(Roosters)&amp;ie=UTF8&amp;t=&amp;z=14&amp;iwloc=B&amp;output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe></div><br />
 </section>
 
 <!-- Footer -->
